2000-05-23  J.T. Conklin  <jtc@redback.com>

	* config/i386/nbsd.mt (TDEPFILES): Move solib.o from here...
	* config/i386/nbsd.mh (NATDEPFILES): ...to here.
	* config/m68k/nbsd.mt (TDEPFILES): Move solib.o from here...
	* config/m68k/nbsd.mh (NATDEPFILES): ...to here.
	* config/ns32k/nbsd.mt (TDEPFILES): Move solib.o from here...
	* config/ns32k/nbsd.mh (NATDEPFILES): ...to here.

	* config/powerpc/nbsd.mt (GDBSERVER_DEPFILES): Add low-nbsd.o.
	* configure.tgt (powerpc-*-netbsd*): add gdbserver to configdirs.
	* gdbserver/low-nbsd.c (initialize_arch): Define for PPC.
	(fetch_inferior_registers): Likewise.
	(store_inferior_registers): Likewise.

	* gdbserver/low-nbsd.c (fetch_inferior_registers): Handle X86 
	floating point registers.
	(store_inferior_registers): Likewise.

2000-05-24  Mark Kettenis  <kettenis@gnu.org>

	* i387-nat.h, i387-nat.c: New files.

Tue May 23 17:21:24 2000  Alexandre Oliva  <aoliva@cygnus.com>

	* config/sparc/nm-linux.h: Include config/nm-linux.h.
	* config/powerpc/nm-linux.h: Likewise.

Tue May 23 13:20:00 1999  Gregory Lielens  <info@fft.be>

	* f-valprint.c : Corrected f_val_print function for TYPE_CODE
	(type) = TYPE_CODE_COMPLEX

Wed May 24 00:38:09 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* utils.c (make_cleanup_close, do_close_cleanup): New functions.
	* defs.h (make_cleanup_close): Add declaration.

Tue May 23 20:47:50 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* configure.in (build_warnings): Add -Wuninitialized.
	* configure: Regenerate.

Tue May 23 17:44:18 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	From Mon May 8 14:49:51 2000 Andrew Cagney <cagney@b1.cygnus.com>
 	(gdb 5.0): From Michael Paddon <mmpp@esec.com.au>:
	* configure.in (AC_CHECK_HEADERS): Check for <sys/user.h>.

	* configure: Re-generate.
	* proc-api.c: Only include <sys/user.h> when available.
	(ioctl_table): Check that PIOCGETPR and PIOCGETU are defined.

	* TODO: Update.

2000-05-17  Michael Snyder  <msnyder@seadog.cygnus.com>
